SLW-43--PGI-58 | Missing spacing if the custom text field is empty corrected.

--- a/themes/custom/c2d_theme/sass/5.components/components.entity.media.canonical.document.scss
+++ b/themes/custom/c2d_theme/sass/5.components/components.entity.media.canonical.document.scss
@@ -77,6 +77,7 @@ article .media__content {
     .content-body-text {
       max-width: calc(119.2rem - 25.3rem);
       padding-left: 0;
+      padding-bottom: 8rem;
       @include breakpoint(medium) {
         padding-left: 4rem;
       }
